syntax = "proto3"; // Use the latest proto syntax

option java_multiple_files = true;
option java_package = "via.dk.elearn.protobuf";
import "rpc_user.proto";

//service TeacherService {
//}

message TeacherModel {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string name = 4;
  string password =5;
  string role = 6;
  int32 securityLevel = 7;
}